--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+# Files and directories from external projects
+node_modules/
+
 # Tempfiles
 *.swp
+tmp/
 
-# Minified user-facing files
+# Minified/binary files
+.git/
 *.css
 *.html
 *.js
