Fixes to node settings, relicense, &c

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
-{	"name": "theodia-tech",
+{
+	"name": "theodia.tech",
 	"version": "0.0.0",
-	"license": "LGPLv3",
+	"license": "MPL-2.0",
 	"author": "Miles Huff",
 	"description": "The backend for the national website of the Technocratic Republic of Theodia",
 	"keywords": [
@@ -12,22 +13,21 @@
 		"type": "git",
 		"url": "https://github.com/TheodiaGov/Website"
 	},
-
 	"engines": {
-		"node": "^0.0.0"
+		"node": "latest"
 	},
 	"main": "bin/node.js",
 	"scripts": {
 		"make": "Makefile.bash make",
 		"clean": "Makefile.bash clean"
 	},
-
 	"dependencies": {
-		"clean-css": "^0.0.0",
-		"clean-css-cli": "^0.0.0",
-		"coffeescript": "^0.0.0",
-		"html-minifier": "^0.0.0",
-		"node-sass": "^0.0.0",
-		"uglify-es": "^0.0.0",
-	},
+		"clean-css": "latest",
+		"clean-css-cli": "latest",
+		"coffeescript": "latest",
+		"coffeescript-concat": "latest",
+		"html-minifier": "latest",
+		"node-sass": "latest",
+		"uglify-es": "latest"
+	}
 }
