Relicensed again. Also added license boilerplates.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "theodia.tech",
 	"version": "0.0.0",
-	"license": "MPL-2.0",
+	"license": "LGPL-3.0",
 	"author": "Miles Huff",
 	"description": "The backend for the national website of the Technocratic Republic of Theodia",
 	"keywords": [
