--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-	"name": "theodia.tech",
+	"name": "Aethodia.org",
 	"version": "0.0.0",
 	"license": "LGPL-3.0",
 	"author": "Miles Huff",
-	"description": "The backend for the national website of the Technocratic Republic of Theodia",
+	"description": "The backend for the national website of the Technocratic Republic of Aethodia",
 	"keywords": [
 		"micronation",
-		"Theodia",
+		"Aethodia",
 		"website"
 	],
-	"homepage": "https://theodia.tech",
+	"homepage": "https://Aethodia.org",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/TheodiaGov/Website"
+		"url": "https://GitHub.com/TheodiaGov/Website"
 	},
 	"engines": {
 		"node": "latest",
@@ -20,10 +20,11 @@
 	},
 	"main": "bin/node.js",
 	"scripts": {
-		"make": "Makefile.bash make",
-		"clean": "Makefile.bash clean"
+		"clean": "build/Makefile.bash clean",
+		"make": "build/Makefile.bash make",
+		"update": "build/Makefile.bash update"
 	},
-	"dependencies": {
+	"devDependencies": {
 		"clean-css": "latest",
 		"clean-css-cli": "latest",
 		"coffeescript": "latest",
