--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,12 @@
+root = true
+
 [*]
 charset = utf-8
-end_of_line = lf
-indent_size  = 4
+## Tabs
 indent_style = tab
+indent_size  = 4
+tab_width = 4
+## Endings
+end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
