--- a/.editorconfig
+++ b/.editorconfig
@@ -4,9 +4,15 @@ root = true
 charset = utf-8
 ## Tabs
 indent_style = tab
-indent_size  = 4
+indent_size = 4
 tab_width = 4
 ## Endings
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+## Filetypes for which spaces, not tabs, are syntactical
+[*.rst, *.md]
+indent_style = space
+indent_size = 2
+tab_width = 2
