--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,23 @@
-root = true
+root=true
 
+## Defaults
+## -----------------------------------------------------------------------------
 [*]
-charset = utf-8
-## Tabs
+
+## Tabulation
 indent_style = tab
-indent_size = 4
-tab_width = 4
-## Endings
+indent_size  = 4
+
+## Lines
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = true
+max_line_length = off
 
-## Filetypes for which spaces, not tabs, are syntactical
-[*.rst, *.md]
+## Other
+charset = utf-8
+
+## Files that require 2-space indents
+## -----------------------------------------------------------------------------
+[{*.md,*.rst}]
 indent_style = space
 indent_size = 2
-tab_width = 2
