--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,12 +1,17 @@
-# https://docs.npmjs.com/misc/config
+## https://docs.npmjs.com/misc/config
 
+## Versioning
 preid = 'rc'
 save-prefix = '^'
 
+## Package-locking
 format-package-lock = false
 package-lock = false
 
+## Logging
+loglevel = warn
+logs-max = 4
+
+## Misc
 access = 'restricted'
 scripts-prepend-node-path = auto
-
-logs-max = 4
