--- a/frontend/.browserslistrc
+++ b/frontend/.browserslistrc
@@ -1,11 +1,18 @@
 #!/usr/bin/env npx browserslist
+## https://github.com/browserslist/browserslist
 
 ## Explicit matching
-# node 10
+maintained node versions
+Firefox ESR
 
 ## Generic matching
-last 0.5 years
-cover 95% in World ## (95% is 2σ in normal distribution)
+cover 95.45%    #NOTE: This is 2σ in normal distribution.
+last 0.5 years  #NOTE: Anything released in the past half-year deserves a chance.
+last 2 versions #NOTE: This gives people time to update.
 
 ## Exclusions
-not IE < 99
+not dead
+not < 0.27%      #NOTE: This is -3σ in normal distribution.
+not ie >= 0      #NOTE: We explicitly unsupport IE.
+not ie_mob >= 0  #NOTE: We explicitly unsupport IE.
+not current node #NOTE: LTSs only.
