--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,8 +50,15 @@
 		"@angular/compiler-cli": "^9",
 		"@angular/language-service": "^9",
 		"@types/node": "^12",
+		"@typescript-eslint/eslint-plugin": "^2",
+		"@typescript-eslint/parser": "^2",
 		"codelyzer": "^5",
-		"eslint": "^6",
+		"eslint": "^6.8.0",
+		"eslint-config-standard": "^14",
+		"eslint-plugin-import": "^2",
+		"eslint-plugin-node": "^11",
+		"eslint-plugin-promise": "^4",
+		"eslint-plugin-standard": "^4",
 		"ts-node": "^8",
 		"typescript": "^3"
 	}
