Added config symlinks to backend

--- a/backend/.npmrc
+++ b/backend/.npmrc
@@ -1,12 +1,1 @@
-# https://docs.npmjs.com/misc/config
-
-preid = 'rc'
-save-prefix = '^'
-
-format-package-lock = false
-package-lock = false
-
-access = 'restricted'
-scripts-prepend-node-path = auto
-
-logs-max = 4
+../frontend/.npmrc
