--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,7 +24,12 @@
                         "tsConfig": "tsconfig.app.json",
                         "aot": true,
                         "assets": [
-                            "src/res"
+                            {
+                                "input": "src/res",
+                                "output": "/",
+                                "glob": "**/*",
+                                "ignore": ["**/.*"]
+                            }
                         ],
                         "styles": [
                             "src/index.scss"
