--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,70 +1,74 @@
 {
     "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
     "version": 1,
+    "defaultProject": "app",
     "newProjectRoot": "projects",
+
     "projects": {
         "app": {
+            "prefix": "app",
             "projectType": "application",
+            "root": ".",
+            "sourceRoot": "./src",
+
             "schematics": {
                 "@schematics/angular:component": {
                     "style": "scss"
                 }
             },
-            "root": ".",
-            "sourceRoot": "./src",
-            "prefix": "app",
             "architect": {
+
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
+                        "tsConfig": "tsconfig.app.json",
                         "outputPath": "dist",
+
                         "index": "src/index.xhtml",
                         "main": "src/index.ts",
-                        "polyfills": "src/env/effects.ts",
-                        "tsConfig": "tsconfig.app.json",
-                        "aot": true,
+                        "polyfills": "src/env/polyfills.ts",
+                        "scripts": [],
+                        "styles": [
+                            "src/index.scss"
+                        ],
                         "assets": [{
                             "input": "src/assets",
                             "output": "/",
                             "glob": "**/*",
                             "ignore": ["**/.*"]
                         }],
-                        "styles": [
-                            "src/index.scss"
-                        ],
-                        "scripts": []
+
+                        "aot": true,
+                        "extractCss": true
                     },
+
                     "configurations": {
                         "production": {
-                            "fileReplacements": [
-                                {
-                                    "replace": "src/env/env.ts",
-                                    "with": "src/env/env.prod.ts"
-                                }
-                            ],
+                            "fileReplacements": [{
+                                "replace": "src/env/env.ts",
+                                "with": "src/env/env.prod.ts"
+                            }],
+                            "budgets": [{
+                                "type": "initial",
+                                "maximumWarning": "2mb",
+                                "maximumError": "5mb"
+                            }, {
+                                "type": "anyComponentStyle",
+                                "maximumWarning": "6kb",
+                                "maximumError": "10kb"
+                            }],
+
+                            "buildOptimizer": true,
+                            "extractLicenses": true,
+                            "namedChunks": false,
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
-                            "extractCss": true,
-                            "namedChunks": false,
-                            "extractLicenses": true,
-                            "vendorChunk": false,
-                            "buildOptimizer": true,
-                            "budgets": [
-                                {
-                                    "type": "initial",
-                                    "maximumWarning": "2mb",
-                                    "maximumError": "5mb"
-                                },
-                                {
-                                    "type": "anyComponentStyle",
-                                    "maximumWarning": "6kb",
-                                    "maximumError": "10kb"
-                                }
-                            ]
+                            "vendorChunk": false
                         }
                     }
                 },
+
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
@@ -76,19 +80,19 @@
                         }
                     }
                 },
+
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
                         "browserTarget": "app:build"
                     }
                 },
+
                 "lint": {
                     "builder": "@angular-devkit/build-angular:eslint",
                     "options": {
                         "tsConfig": [
-                            "tsconfig.app.json",
-                            "tsconfig.spec.json",
-                            "e2e/tsconfig.json"
+                            "tsconfig.app.json"
                         ],
                         "exclude": [
                             "**/node_modules/**",
@@ -98,6 +102,5 @@
                 }
             }
         }
-    },
-    "defaultProject": "app"
+    }
 }
