--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -6,7 +6,7 @@
     },
     "files": [
         "src/index.ts",
-        "src/env/effects.ts"
+        "src/env/polyfills.ts"
     ],
     "include": [
         "src/**/*.d.ts"
