Temporarily disabled CSS extraction due to https://github.com/angular/angular/issues/35404.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -39,7 +39,7 @@
                         }],
 
                         "aot": true,
-                        "extractCss": true
+                        "extractCss": false
                     },
 
                     "configurations": {
