--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,10 +42,10 @@
 		"@angular/router": "^9",
 		"rxjs": "^6",
 		"tslib": "^1",
-		"zone.js": "^0.10"
+		"zone.js": "~0.10"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^0.900",
+		"@angular-devkit/build-angular": "~0.900",
 		"@angular/cli": "^9",
 		"@angular/compiler-cli": "^9",
 		"@angular/language-service": "^9",
@@ -53,7 +53,7 @@
 		"@typescript-eslint/eslint-plugin": "^2",
 		"@typescript-eslint/parser": "^2",
 		"codelyzer": "^5",
-		"eslint": "^6.8.0",
+		"eslint": "^6",
 		"eslint-config-standard": "^14",
 		"eslint-plugin-import": "^2",
 		"eslint-plugin-node": "^11",
