--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 		"@angular/platform-browser": "^9",
 		"@angular/platform-browser-dynamic": "^9",
 		"@angular/router": "^9",
+		"lodash": "^4",
 		"rxjs": "^6",
 		"tslib": "^1",
 		"zone.js": "~0.10"
@@ -49,6 +50,7 @@
 		"@angular/cli": "^9",
 		"@angular/compiler-cli": "^9",
 		"@angular/language-service": "^9",
+		"@types/lodash": "^4",
 		"@types/node": "^12",
 		"@typescript-eslint/eslint-plugin": "^2",
 		"@typescript-eslint/parser": "^2",
