--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "@theodia/frontend",
   "version": "0.0.0",
   "license": "SEE LICENSE IN ../Copyright.txt",
-  "description": "The national website of the Technocratic Republic of Theodia",
+  "description": "The frontend for the national website of the Technocratic Republic of Theodia",
   "keywords": [
     "micronation",
     "Theodia",
@@ -19,6 +19,7 @@
     "bin": "./dist",
     "lib": "./src"
   },
+  "type": "module",
   "main": "./src/index.ts",
   "scripts": {
     "start": "npx ng serve",
@@ -29,7 +30,7 @@
     "postinstall": "npm rebuild && npm dedupe"
   },
   "engines": {
-    "npm": ">6"
+    "npm": ">=6"
   },
   "dependencies": {
     "@angular/animations": "^9",
