--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -1,15 +1,26 @@
-env:
-  browser: true
-  es6: true
-extends:
-  - standard
-globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
-parser: '@typescript-eslint/parser'
-parserOptions:
-  ecmaVersion: next
-  sourceType: module
-plugins:
-  - '@typescript-eslint'
-rules: {}
+'use strict';
+export default {
+
+    // Parser
+    parser: '@typescript-eslint/parser',
+    parserOptions: {
+        sourceType: 'module',
+        ecmaVersion: 'esnext',
+    },
+
+    // External
+    plugins: [
+        '@typescript-eslint',
+    ],
+    extends: [],
+
+    // Variables
+    env: {
+        'browser': true,
+        'es6': true,
+    },
+    globals: {},
+
+    // Rules
+    rules: {}
+};
