--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,30 +1,24 @@
 {
-    "compileOnSave": false,
+    "extends": "../shared/tsconfig.json",
+
     "compilerOptions": {
 
         "baseUrl": "./",
         "outDir": "./out-tsc",
 
-        "moduleResolution": "node",
-        "module": "ESNext",
-        "target": "ES6",
-
         "lib": [
             "ESNext",
             "DOM"
         ],
-        "typeRoots": [
-            "node_modules/@types"
-        ],
 
         "declaration": false,
-        "downlevelIteration": true,
-        "experimentalDecorators": true,
-        "importHelpers": true,
         "sourceMap": true,
     },
+
     "angularCompilerOptions": {
         "fullTemplateTypeCheck": true,
         "strictInjectionParameters": true
-    }
+    },
+
+    "compileOnSave": false,
 }
