--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,17 +1,1 @@
-## https://docs.npmjs.com/misc/config
-
-## Versioning
-preid = 'rc'
-save-prefix = '^'
-
-## Package-locking
-format-package-lock = false
-package-lock = false
-
-## Logging
-loglevel = warn
-logs-max = 4
-
-## Misc
-access = 'restricted'
-scripts-prepend-node-path = auto
+../shared/.npmrc
