--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@theodia/backend",
   "version": "0.0.0",
-  "license": "SEE LICENSE IN ../Copyright.txt",
+  "license": "SEE LICENSE IN ../LICENSE.TXT",
   "description": "The backend for the national website of the Technocratic Republic of Theodia",
   "keywords": [
     "micronation",
