--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -3,8 +3,11 @@
     "compilerOptions": {
         "outDir": "./out-tsc/app"
     },
+    "types": [
+        "node"
+    ],
     "files": [
-        "src/index.ts",
+        "src/main.ts",
         "src/polyfills.ts"
     ],
     "include": [
