Fixes and tweaks to tsconfigs

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,7 +3,7 @@
 
     "compilerOptions": {
 
-        "baseUrl": "./",
+        "baseUrl": "./src",
         "outDir": "./out-tsc",
 
         "lib": [
