--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,7 +1,9 @@
 {
     "extends": "./tsconfig.json",
-    "exclude": [
-        "node_modules",
-        "dist"
+    "files": [
+        "./src/main.ts"
+    ],
+    "include": [
+        "./src/**/*.d.ts"
     ]
 }
