--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
 
     "compilerOptions": {
 
-        "baseUrl": "./",
+        "baseUrl": "./src",
         "outDir": "./dist",
 
         "module": "CommonJS",
