--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -6,7 +6,7 @@
         "target": "ES6",
 
         "lib": [
-            "ESNext",
+            "ESNext"
         ],
         "typeRoots": [
             "node_modules/@types"
@@ -15,6 +15,7 @@
         "downlevelIteration": true,
         "experimentalDecorators": true,
         "importHelpers": true,
+        "strict": true
     },
 
     "exclude": [
