--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -76,7 +76,8 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "app:build"
+                        "browserTarget": "app:build",
+                        "proxyConfig": "proxy.json"
                     },
                     "configurations": {
                         "production": {
