--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,8 +1,5 @@
 {
     "extends": "./tsconfig.json",
-    "compilerOptions": {
-        "outDir": "./out-tsc/app"
-    },
     "types": [
         "node"
     ],
@@ -10,7 +7,8 @@
         "src/main.ts",
         "src/polyfills.ts"
     ],
-    "include": [
-        "src/**/*.d.ts"
+    "exclude": [
+        "**/*.spec.*",
+        "**/*.prod.*",
     ]
 }
