--- a/backend/tsconfig.app.json
+++ b/backend/tsconfig.app.json
@@ -1,9 +1,6 @@
 {
     "extends": "./tsconfig.json",
-    "files": [
-        "./src/main.ts"
-    ],
-    "include": [
-        "./src/**/*.d.ts"
+    "exclude": [
+        "**/*.spec.*"
     ]
 }
