--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,8 +3,8 @@
 
     "compilerOptions": {
 
-        "baseUrl": "./src",
-        "outDir": "./out-tsc",
+        "baseUrl": "src",
+        "outDir": "dist/tsc",
 
         "lib": [
             "ESNext",
@@ -13,15 +13,17 @@
         "types": [
             "webpack-env"
         ],
-
-        "declaration": false,
-        "sourceMap": true,
     },
+
+    "include": [
+        "**/*.ts",
+        "**/*.tsx",
+        "**/*.js",
+        "**/*.jsx"
+    ],
 
     "angularCompilerOptions": {
         "fullTemplateTypeCheck": true,
         "strictInjectionParameters": true
-    },
-
-    "compileOnSave": false
+    }
 }
