--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,6 +1,9 @@
+// This file supports comments.
+// Documentation: https://www.typescriptlang.org/tsconfig
 {
     "compilerOptions": {
 
+        // Library versions
         "moduleResolution": "node",
         "module": "ESNext",
         "target": "ES6",
@@ -8,14 +11,36 @@
         "lib": [
             "ESNext"
         ],
-        "typeRoots": [
-            "node_modules/@types"
-        ],
 
-        "downlevelIteration": true,
+        // Linter rules (enable anything that causes a compilation/typing error;  leave everything else to a proper linting tool.)
+        "allowJs": true,
+        "allowUnreachableCode": true, // Isn't a compilation error; should be handled by a dedicated linter.
+        "checkJs": true,
         "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
+        "noImplicitReturns": true, // Is technically a typing error, so should be handled by TypeScript.
+        "resolveJsonModule": true,
+        "strict": true,
+
+        // Maps
+        // "declaration": false,
+        "declarationMap": true,
+        "sourceMap": true,
+        "mapRoot": "debug/maps",
+        "sourceRoot": "debug/src",
+
+        //
+        "composite": true,
+        "preserveSymlinks": true,
+
+        // Compilation options
+        "downlevelIteration": true,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
         "importHelpers": true,
-        "strict": true
+        // "importsNotUsedAsValues": "preserve",
+        "removeComments": true,
+
     },
 
     "exclude": [
